pytorch version of vgg16

--- a/06_pytorch_version.ipynb
+++ b/06_pytorch_version.ipynb
@@ -417,7 +417,9 @@
       "Train Loss: 0.0446, Train Acc: 29.91\n",
       "Validation Loss: 0.0372, Validation Acc: 33.19\n",
       "Train Loss: 0.0351, Train Acc: 34.30\n",
-      "Validation Loss: 0.0344, Validation Acc: 33.38\n"
+      "Validation Loss: 0.0344, Validation Acc: 33.38\n",
+      "Train Loss: 0.0332, Train Acc: 34.38\n",
+      "Validation Loss: 0.0337, Validation Acc: 33.71\n"
      ]
     }
    ],
